# ModASM

./: CMakeLists.txt  main.c  script.asm
Scripts/Error/: error.c  error.h
Scripts/Instruction/Instruction/: instruction.c  instruction.h
Scripts/Instruction/InstructionGen/: instructionGen.c  instructionGen.h
Scripts/Instruction/InstructionReader/: instructionReader.c  instructionReader.h
Scripts/Parsing/File/: file.c  file.h
Scripts/Parsing/Lexer/: lexer.c  lexer.h
Scripts/Tokenization/Token/: token.c  token.h
Scripts/Tokenization/TokenReader/: tokenReader.c  tokenReader.h
Scripts/Tokenization/Tokenizer/: tokenizer.c  tokenizer.h
Scripts/Write/: write.c  write.h
